src/objects/Events__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BEO_Terms_Conditions_Effective_Date__c</fullName>
        <description>This is the effective date for the Terms and Conditions for Private Banquet Rooms</description>
        <label>BEO Terms Conditions Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BEO_Terms_Conditions_Title__c</fullName>
        <description>This is the Title of the Terms and Conditions for use of Private Banquet Rooms</description>
        <label>BEO Terms Conditions Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banquet_Booking_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banquet Booking Limit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banquet_Email__c</fullName>
        <label>Banquet Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deposit_Percentage__c</fullName>
        <label>Deposit Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Address__c</fullName>
        <label>Organization Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Transactions_Report_ID__c</fullName>
        <label>Event Transactions Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Fax__c</fullName>
        <label>Organization Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Phone__c</fullName>
        <label>Organization Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Server_of_Total_Bar_Service_Charge__c</fullName>
        <label>Server % of Total Bar Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Server_of_Total_Beverage_Service_Charg__c</fullName>
        <label>Server % of Total Beverage Service Charg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Server_of_Total_Fitness_Service_Charge__c</fullName>
        <label>Server % of Total Fitness Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Server_of_Total_Food_Service_Charge__c</fullName>
        <label>Server % of Total Food Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Server_of_Total_Other_Service_Charge__c</fullName>
        <label>Server % of Total Other Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Bar_Service_Charge__c</fullName>
        <label>Total Bar Service Charge %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Beverage_Service_Charge__c</fullName>
        <label>Total Beverage Service Charge %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Fitness_Service_Charge__c</fullName>
        <label>Total Fitness Service Charge %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Food_Service_Charge__c</fullName>
        <label>Total Food Service Charge %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Other_Service_Charge__c</fullName>
        <label>Total Other Service Charge %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Events</label>
</CustomObject>